# jwt-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
build-auto/: DartConfiguration.tcl  Makefile  claims_test  claims_test[1]_include.cmake  claims_test[1]_tests.cmake  cmd_args_test[1]_include.cmake  cmd_args_test[1]_tests.cmake  jwt++  jwt_test  jwt_test[1]_include.cmake  jwt_test[1]_tests.cmake
include/jwt/: account_claims.hpp  claims.hpp  jwt.hpp  jwt_constants.hpp  operator_claims.hpp  user_claims.hpp  validation.hpp
src/: account_claims.cpp  base64url.cpp  base64url.hpp  claims.cpp  jwt.cpp  jwt_utils.cpp  jwt_utils.hpp  operator_claims.cpp  user_claims.cpp  validation.cpp
src/tools/: cmd_args.hpp  jwt-main.cpp
tests/: claims_test.cpp  cmd_args_test.cpp  e2e_test.cpp  jwt_test.cpp  validation_test.cpp
tests/fixtures/: account.jwt  operator.jwt  user.creds  user.jwt
